// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropt Modal is enabled when there is 1 valid dropt redemption 1`] = `
<div>
  <div
    class="MuiGrid-root-7 makeStyles-droptModalButton-5 MuiGrid-container-8 MuiGrid-justify-xs-flex-end-26"
  >
    <button
      aria-label="Redeem DROPT"
      class="MuiButtonBase-root-139 MuiButton-root-110 MuiButton-contained-118 MuiButton-containedPrimary-119 MuiButton-containedSizeSmall-129 MuiButton-sizeSmall-131"
      id="redeem-button"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-111"
      >
        Redeem DROPT
      </span>
      <span
        class="MuiTouchRipple-root-142"
      />
    </button>
  </div>
</div>
`;

exports[`Invalid Dropt Modal is disabled when no valid dropt redemption 1`] = `
<div>
  <div
    class="MuiGrid-root-7 makeStyles-droptModalButton-5 MuiGrid-container-8 MuiGrid-justify-xs-flex-end-26"
  >
    <button
      aria-label="Redeem Dropt"
      class="MuiButtonBase-root-139 MuiButton-root-110 MuiButton-contained-118 MuiButton-containedPrimary-119 MuiButton-containedSizeSmall-129 MuiButton-sizeSmall-131 MuiButton-disabled-123 MuiButtonBase-disabled-140"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label-111"
      >
        Redeem DROPT
      </span>
    </button>
  </div>
</div>
`;
